crates/specforge-cli/tests/snapshots/tests__read_views__stats_rv1_cli_human.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized_text(&human.stdout, root)"
---
Entities: 6
  behavior: 3
  type: 3
Edges:    2
Orphans:  3
Verified: 1
Declared: 20% of 5 testable
Diagnostics: 0 errors, 8 warnings, 0 info
