crates/specforge-cli/tests/snapshots/tests__read_views__stats_rv1_mcp.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(mcp, root)"
---
{
  "declared_pct": 20.0,
  "diagnostic_summary": {
    "errors": 0,
    "infos": 0,
    "warnings": 8
  },
  "edge_count": 2,
  "entity_counts": [
    {
      "count": 3,
      "kind": "behavior"
    },
    {
      "count": 3,
      "kind": "type"
    }
  ],
  "unconnected_count": 3
}
