crates/specforge-cli/tests/snapshots/tests__read_views__trace_fx1_ghost_cli.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "format!(\"exit: {:?}\\nstdout:\\n{}stderr:\\n{}\", ghost.code, ghost.stdout,\nghost.stderr)"
---
exit: Some(1)
stdout:
{
  "code": "E003",
  "error": "unresolved entity 'ghost' — not found in graph",
  "suggestion": null
}
stderr:
