crates/specforge-cli/tests/snapshots/tests__read_views__trace_fx1_login_cli_human.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: human.stdout
---
login [behavior]
  upstream:
    (none)
  downstream:
    -features-> signin [feature] (depth 1)
  missing:
    MISSING login -consumes-> [event] (depth 1)
    MISSING login -invariants-> [invariant] (depth 1)
    MISSING login -ports-> [port] (depth 1)
    MISSING login -produces-> [event] (depth 1)
    MISSING login -types-> [type] (depth 1)
