crates/specforge-cli/tests/snapshots/tests__read_views__trace_fx1_login_mcp.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(value, root)"
---
{
  "downstream": [
    {
      "depth": 1,
      "edge_label": "features",
      "entity_id": "signin",
      "entity_kind": "feature",
      "status": "resolved"
    }
  ],
  "entity_id": "login",
  "entity_kind": "behavior",
  "gaps": [
    "no upstream links"
  ],
  "missing": [
    {
      "depth": 1,
      "edge_label": "consumes",
      "edge_type": "BehaviorConsumesEvent",
      "expected_kind": "event",
      "from": "login",
      "from_kind": "behavior",
      "required": false,
      "status": "missing"
    },
    {
      "depth": 1,
      "edge_label": "invariants",
      "edge_type": "BehaviorEnforcesInvariant",
      "expected_kind": "invariant",
      "from": "login",
      "from_kind": "behavior",
      "required": false,
      "status": "missing"
    },
    {
      "depth": 1,
      "edge_label": "ports",
      "edge_type": "BehaviorUsesPort",
      "expected_kind": "port",
      "from": "login",
      "from_kind": "behavior",
      "required": false,
      "status": "missing"
    },
    {
      "depth": 1,
      "edge_label": "produces",
      "edge_type": "BehaviorProducesEvent",
      "expected_kind": "event",
      "from": "login",
      "from_kind": "behavior",
      "required": false,
      "status": "missing"
    },
    {
      "depth": 1,
      "edge_label": "types",
      "edge_type": "BehaviorReferencesType",
      "expected_kind": "type",
      "from": "login",
      "from_kind": "behavior",
      "required": false,
      "status": "missing"
    }
  ],
  "schema_version": "0.1.0",
  "upstream": []
}
