crates/specforge-cli/tests/snapshots/tests__read_views__trace_fx1_plan_mcp.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(value, root)"
---
{
  "affected_entities": [
    "login"
  ],
  "gaps": [
    {
      "gap_context": "E003: unresolved entity 'ghost' in plan — not found in graph",
      "missing_link_type": "unresolved_entity",
      "source_entity": "plan",
      "target_entity": "ghost"
    },
    {
      "gap_context": "testable entity 'Payload' (type) is not covered by the plan",
      "missing_link_type": "missing_plan_entry",
      "source_entity": "plan",
      "target_entity": "Payload"
    },
    {
      "gap_context": "testable entity 'reset_password' (behavior) is not covered by the plan",
      "missing_link_type": "missing_plan_entry",
      "source_entity": "plan",
      "target_entity": "reset_password"
    }
  ]
}
