crates/specforge-cli/tests/snapshots/tests__read_views__unknown_kind_wordings_today_infer.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&answer, root).to_string()"
---
{
  "code": -32602,
  "data": {
    "argument": "scope",
    "code": "invalid_input",
    "data": {
      "suggestion": "did you mean 'behavior'?"
    },
    "message": "unknown entity kind 'behaviour'",
    "prompt": "specforge://prompts/infer"
  },
  "message": "unknown entity kind 'behaviour'"
}
