crates/specforge-cli/tests/snapshots/tests__read_views__unknown_kind_wordings_today_schema.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&answer, root).to_string()"
---
{
  "content": [
    {
      "text": "{\"argument\":\"kind\",\"code\":\"invalid_input\",\"data\":{\"suggestion\":\"did you mean 'behavior'?\"},\"message\":\"unknown entity kind: 'behaviour'\",\"tool\":\"specforge.schema\"}",
      "type": "text"
    }
  ],
  "isError": true
}
