crates/specforge-cli/tests/snapshots/tests__read_views__unknown_kind_wordings_today_search.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&answer, root).to_string()"
---
{
  "_meta": {
    "diagnostics": [
      {
        "code": "I020",
        "column": null,
        "file": null,
        "line": null,
        "message": "unknown entity kind 'behaviour'",
        "severity": "Info",
        "span": null,
        "suggestion": "did you mean 'behavior'?",
        "title": "Unknown entity kind in a filter"
      }
    ]
  },
  "content": [
    {
      "text": "[]",
      "type": "text"
    }
  ],
  "isError": false
}
